# binus-logbook

./: .eslintignore  .eslintrc.cjs  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: rust-clippy.yml
proto/: helloworld.proto  result.proto  scraper.proto
scraper/: Makefile  go.mod  go.sum  pyproject.toml
scraper/cmd/api/: main.go
scraper/cmd/debug/: main.go
scraper/internal/binus/: scraper.go
scraper/internal/container/: container.go
scraper/internal/grpc/: grpc.go  querier.go  server.go
scraper/internal/http/: server.go
scraper/internal/models/: student.go  task.go
scraper/internal/queue/: consumer.go  queue.go
scraper/internal/student/: domain.go  querier.go  service.go
scraper/scraper/: binus.py  main.py
scraper2/: go.mod  go.sum
scraper2/cmd/api/: main.go
scraper2/internal/binus/: scraper.go
scraper2/internal/container/: container.go
scraper2/internal/http/: server.go
scraper2/internal/student/: service.go
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app.rs  main.rs
src-tauri/src/commands/: commands.rs  mod.rs
src-tauri/src/events/: events.rs
src-tauri/src/grpc/: handler.rs  mod.rs  result.rs  scraper.rs  service.rs
src-tauri/src/models/: task.rs
src/constants/: routes.ts
src/hooks/: useLoginMutation.ts  useMeQuery.ts
src/layouts/: BaseLayout.astro
src/pages/: index.astro
src/schemas/: index.ts
src/stores/: index.ts
src/types/: domain.ts  errors.ts  hooks.ts  stores.ts
src/utils/: parseError.ts  request.ts
(+29 files in other folders)
